Update index.css to stop page-content overflow

--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,8 @@ html, body {
 
   justify-content: center;
   align-items: center;
+
+  max-height: calc(100% - var(--page-header-height));
 }
 
 input {
